--- a/Balluchon/View/Base.lproj/Main.storyboard
+++ b/Balluchon/View/Base.lproj/Main.storyboard
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="69V-uJ-5zH">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -32,11 +31,11 @@
             <objects>
                 <viewController id="uPX-2L-qDI" customClass="TranslationViewController" customModule="Balluchon" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7zO-J9-amx">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="OGa-eH-kbz">
-                                <rect key="frame" x="20" y="183" width="374" height="128"/>
+                                <rect key="frame" x="20" y="139" width="560" height="128"/>
                                 <color key="backgroundColor" name="#c6cdd7"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="Pbs-t8-2QW"/>
@@ -50,7 +49,7 @@
                                 </connections>
                             </textView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="A8B-ka-maI">
-                                <rect key="frame" x="20" y="381" width="374" height="128"/>
+                                <rect key="frame" x="20" y="337" width="560" height="128"/>
                                 <color key="backgroundColor" name="#c6cdd7"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="1wR-jc-BBM"/>
@@ -60,10 +59,10 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CHi-Q6-rw1" userLabel="Back GroundView">
-                                <rect key="frame" x="20" y="128" width="374" height="35"/>
+                                <rect key="frame" x="20" y="84" width="560" height="35"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="eVi-bh-GjF">
-                                        <rect key="frame" x="78" y="6.5" width="218.5" height="22"/>
+                                        <rect key="frame" x="171" y="6.5" width="218.5" height="22"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="English" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iH7-f9-XgB">
                                                 <rect key="frame" x="0.0" y="0.0" width="55.5" height="22"/>
@@ -95,7 +94,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fXG-dK-yVj">
-                                <rect key="frame" x="20" y="331" width="374" height="30"/>
+                                <rect key="frame" x="20" y="287" width="560" height="30"/>
                                 <color key="backgroundColor" name="#4a6d88"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Translate"/>
@@ -104,7 +103,7 @@
                                 </connections>
                             </button>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="TCA-AY-idI">
-                                <rect key="frame" x="197" y="336" width="20" height="20"/>
+                                <rect key="frame" x="290" y="292" width="20" height="20"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -198,11 +197,11 @@
             <objects>
                 <viewController id="hLF-Am-3YI" customClass="WeatherViewController" customModule="Balluchon" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xID-z5-duM">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UNj-2k-CfH">
-                                <rect key="frame" x="20" y="128" width="374" height="100"/>
+                                <rect key="frame" x="20" y="84" width="560" height="100"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Weather" translatesAutoresizingMaskIntoConstraints="NO" id="u1t-vc-wup">
                                         <rect key="frame" x="8" y="40" width="50" height="50"/>
@@ -212,7 +211,7 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I49-2a-dGa">
-                                        <rect key="frame" x="139" y="8" width="96" height="24"/>
+                                        <rect key="frame" x="232" y="8" width="96" height="24"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -230,7 +229,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="tQk-g7-F4d">
-                                        <rect key="frame" x="177" y="40" width="20" height="20"/>
+                                        <rect key="frame" x="270" y="40" width="20" height="20"/>
                                     </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" name="#4a6d88"/>
@@ -250,7 +249,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JJF-US-RvG">
-                                <rect key="frame" x="20" y="248" width="374" height="100"/>
+                                <rect key="frame" x="20" y="204" width="560" height="100"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Weather" translatesAutoresizingMaskIntoConstraints="NO" id="BAM-Wo-GUV">
                                         <rect key="frame" x="8" y="40" width="50" height="50"/>
@@ -260,7 +259,7 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2O-az-06W">
-                                        <rect key="frame" x="139" y="8" width="96" height="24"/>
+                                        <rect key="frame" x="232" y="8" width="96" height="24"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -278,7 +277,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="R1F-37-jfH">
-                                        <rect key="frame" x="177" y="40" width="20" height="20"/>
+                                        <rect key="frame" x="270" y="40" width="20" height="20"/>
                                     </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" name="#4a6d88"/>
@@ -332,27 +331,27 @@
         <!--Currency converter-->
         <scene sceneID="zaE-Xz-pJh">
             <objects>
-                <viewController id="Jv4-Tl-u9S" customClass="CurrencyViewController" customModule="Balluchon" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Jv4-Tl-u9S" customClass="ConverterViewController" customModule="Balluchon" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lXR-nJ-96z">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Yc-3Z-FMs">
-                                <rect key="frame" x="20" y="183" width="374" height="200"/>
+                                <rect key="frame" x="20" y="139" width="560" height="200"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00.00$" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ssG-XV-eHN">
-                                        <rect key="frame" x="8" y="27" width="358" height="36"/>
+                                        <rect key="frame" x="8" y="27" width="544" height="36"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="€" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Rfm-S4-kqx">
-                                        <rect key="frame" x="8" y="70" width="358" height="34"/>
+                                        <rect key="frame" x="8" y="70" width="544" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="numbersAndPunctuation"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zeZ-sh-qTv">
-                                        <rect key="frame" x="137" y="134" width="100" height="30"/>
+                                        <rect key="frame" x="230" y="134" width="100" height="30"/>
                                         <color key="backgroundColor" name="#001e38"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="mXM-ca-Ceg"/>
@@ -379,10 +378,10 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WSq-VD-iLQ">
-                                <rect key="frame" x="20" y="128" width="374" height="35"/>
+                                <rect key="frame" x="20" y="84" width="560" height="35"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="wMu-1E-SeX">
-                                        <rect key="frame" x="79" y="6.5" width="216.5" height="22"/>
+                                        <rect key="frame" x="172" y="6.5" width="216.5" height="22"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dollards" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U2R-h8-r15">
                                                 <rect key="frame" x="0.0" y="0.0" width="63" height="22"/>
@@ -414,7 +413,7 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="53" translatesAutoresizingMaskIntoConstraints="NO" id="eU4-a6-5CA">
-                                <rect key="frame" x="131" y="96" width="152.5" height="20"/>
+                                <rect key="frame" x="224" y="52" width="152.5" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading ..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RQh-Ce-Y2f">
                                         <rect key="frame" x="0.0" y="0.0" width="79.5" height="20"/>
